test/should_not_compile/reserved_valdesc.sml
signature S = sig
  val true : int
end;
